# pixel-carrierconfig-toolbox

./: .gitattributes  .gitignore  CITATION.cff  CONTRIBUTING.md  Cargo.toml  DESIGN.md  NOTICE  README.md
.github/workflows/: main.yml
docs/: cfgdb.proto  pixel-carrier-modem-config.md  regenerating-nv-table.md
src/: cfgdb.rs  clz4.rs  confseq.rs  error.rs  lib.rs  main.rs  manifest.rs  nvtable.rs  report.rs
src/magisk/: mod.rs
src/magisk/assets/: update-binary
src/project/: compile.rs  decompile.rs  mod.rs
tests/: roundtrip.rs
